--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@ It uses the trefle API, available at https://trefle.io/
 It also uses "materialize" css for styling.
 -->
 
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <title>Find Plants</title>
 <link rel="stylesheet" href="styles.css">
 <script type="text/javascript">
