--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@ const render = (plantId) => {
 
     console.log(json)
     let details = json.data
+    console.log(details)
     
     // show the common name but only if there is one on record
     let theName = (details.common_name)?
