family and genus

--- a/public/index.html
+++ b/public/index.html
@@ -60,9 +60,8 @@ const render = (plantId) => {
       '</div>'+
       '<div class="card-stacked">'+
         '<div class="card-content">'+
-          '<p><b>Division</b>: '+ details.division.name +'<br/>'+
-          '<b>Family</b>: '+ details.family.name+'<br/>'+
-          '<b>Genus</b>: '+ details.genus.name+'</p>'+
+          '<b>Family</b>: '+ details.main_species.family+'<br/>'+
+          '<b>Genus</b>: '+ details.main_species.genus+'</p>'+
         '</div>'+
           theName +
       '</div>'+
