--- a/public/index.html
+++ b/public/index.html
@@ -114,6 +114,9 @@ const render = (plantId) => {
       <!--search results will be added here dynamically -->
   </section>
 
+    <footer>
+      Data supplied by the <a href="https://trefle.io">Trefle API</a>.
+    </footer>
      <!-- Compiled and minified JavaScript -->
      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
