--- a/public/index.html
+++ b/public/index.html
@@ -18,93 +18,16 @@ It also uses "materialize" css for styling.
 <!-- Compiled and minified CSS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
+<!-- Custom Styles -->
 <link rel="stylesheet" href="styles.css">
-<script type="text/javascript">
 
-// Node.js will generate a client-side token for Trefle.
-// Tokens are domain-specific so they won't work on other sites.
-let token 
-fetch('/PlantFinder/token/')
-  .then(response => response.json())
-  .then(result =>  { 
-      token = result['token']; 
-      // once the token is loaded we can unhide the navigation
-      document.getElementById("navigation").style.display = "block";
-   })
-  .catch(error => console.log('error', error));
+<!-- Frontend JavaScript -->
+<script src="plantfinder.js"></script>
 
-// when the form is submitted, run the search
-let formSubmit = (e) => {
-   event.preventDefault();
-   let terms = document.getElementById("search").value;
-   search(terms);
-}
-
-// runs a search for the given terms
-// and trigger a rendering for each one
-const search = (terms) => {
-  // clear the previous search
-  document.getElementById("content").innerHTML = '';
-  terms = encodeURIComponent( terms)
-  fetch('https://trefle.io/api/v1/plants/search?q='+terms+'&token='+token  )
-    .then(response => response.json())
-    .then(plants => {
-        console.log(plants)
-        for (i in plants.data){ 
-          render(plants.data[i].id); 
-        }
-     })
-    .catch(error => console.log('error', error));
-}
-
-// render the plant by fetching additional details
-const render = (plantId) => {
-  
-  // fetch details about the plant
-  fetch(  'https://trefle.io/api/v1/plants/'+plantId+'?token='+token )
-  .then( response => response.json() )
-  .then( json => {
-
-    // console.log(json);
-    
-    // show the common name but only if there is one on record
-    let theName = (json.data.common_name)?
-      '<div class="card-action">'+
-        '<a href="#">'+json.data.common_name+'</a>'+
-      '</div>':'';
-
-    // show a default icon if no image is provided.
-    let theImg = 'plant.png';
-    if (typeof json.data.image_url == "string"){
-      // floristic doesnt have a valid cert so we will use plantnet instead
-      theImg = json.data.image_url.replace("floristic", "plantnet");
-    } 
-
-    // Generate HTML for a plant listing.
-    // See https://materializecss.com/cards.html
-    document.getElementById("content").innerHTML +=
-    '<div class="col s12 m7">'+
-      '<h2 class="header">'+json.data.scientific_name+'</h2>'+
-      '<div class="card horizontal">'+
-        '<div class="card-image">'+
-          '<img width="150" src="'+theImg+'">'+
-        '</div>'+
-        '<div class="card-stacked">'+
-          '<div class="card-content">'+
-            '<b>Family</b>: '+ json.data.main_species.family+'<br/>'+
-            '<b>Genus</b>: '+ json.data.main_species.genus+'</p>'+
-          '</div>'+
-            theName +
-        '</div>'+
-      '</div>'+
-    '</div>';
-  })
- .catch(error => console.log('error', error));
-}
-</script>
 </head>
 <body>
-  <!-- Navigation bar to hold search form-->
+  <!-- Navigation is hidden by default. 
+     It will be enabled once we have acquired a token -->
   <nav id="navigation">
    <div class="nav-wrapper">
      <form onsubmit="formSubmit(this)">
@@ -121,10 +44,10 @@ const render = (plantId) => {
       <!--search results will be added here dynamically -->
   </section>
 
-    <footer>
-      Data supplied by the <a href="https://trefle.io">Trefle API</a>.
-    </footer>
+  <footer>
+    Data supplied by the <a href="https://trefle.io">Trefle API</a>.
+  </footer>
      <!-- Compiled and minified JavaScript -->
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>-->
 </body>
 </html>
