--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@ It also uses "materialize" css for styling.
 <!-- Custom Styles -->
 <link rel="stylesheet" href="styles.css">
 
+
 <!-- Frontend JavaScript -->
 <script src="plantfinder.js"></script>
 
@@ -30,7 +31,7 @@ It also uses "materialize" css for styling.
      It will be enabled once we have acquired a token -->
   <nav id="navigation">
    <div class="nav-wrapper">
-     <form onsubmit="formSubmit(this)">
+     <form onsubmit="findPlant()">
        <div class="input-field">
          <input placeholder="Find a Plant"  id="search" type="search" required>
          <label class="label-icon" for="search"><i class="material-icons">search</i></label>
