refactor search method

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@ It also uses "materialize" css for styling.
      It will be enabled once we have acquired a token -->
   <nav id="navigation">
    <div class="nav-wrapper">
-     <form onsubmit="findPlant()">
+     <form id="searchForm">
        <div class="input-field">
          <input placeholder="Find a Plant"  id="search" type="search" required>
          <label class="label-icon" for="search"><i class="material-icons">search</i></label>
