--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@ It also uses "materialize" css for styling.
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <title>Find Plants</title>
 
-<!--Import Google Icon Font-->
+<!--Import Google Icon Font , used for the search magnifier -->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 <!-- Compiled and minified CSS -->
